[gd_scene load_steps=3 format=3 uid="uid://cpxj4aeuv006l"]

[ext_resource type="Script" path="res://addons/dj/MuteButtonList.gd" id="1_hivsh"]
[ext_resource type="Theme" uid="uid://cul4fuxbykddp" path="res://addons/core/ui/BlueButtonTheme.tres" id="2_k4kf0"]

[node name="MuteButtonList" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hivsh")

[node name="MuteMusicButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_k4kf0")
text = "Mute Music"

[node name="MuteSoundButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_k4kf0")
text = "Mute Sound"

[node name="MuteAllButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_k4kf0")
text = "Mute All"

[node name="UnmuteAllButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("2_k4kf0")
text = "Unmute All"
